refactor(supplier): enrich supplier status responses and mapper responsibilities
* ENUM:
  - `SupplierStatus.java`: Add object-shaped JSON serialization and transition helper to expose richer status context.
Hide nested next states from enum serialization to avoid recursive JSON output.

* RESPONSE:
  - `SupplierResponse.java`: Change supplier status and available actions from strings to rich enum objects for frontend commands.

* MAPPER:
  - `SupplierMapper.java`: Split supplier mapping into clearer focused methods for entity creation, response mapping, and available actions.

* ENTITY:
  - `Supplier.java`: Separate phone number uniqueness into a named constraint and keep search indexes explicit.

* INTEGRATION:
  - `ImportService.java`: Use supplier status enum directly instead of comparing status strings.
  - `ProductService.java`: Use supplier status enum behavior directly instead of parsing status strings.